Update index.html to responsive version

--- a/index.html
+++ b/index.html
@@ -13,24 +13,28 @@
   </header>
 
   <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I'm currently learning HTML, CSS, and JavaScript.  
-      I’m building real-world projects to grow my skills and create cool things.
-    </p>
+    <h2>📘 About Me</h2>
+    <p>I’m currently learning web development and love building cool things with HTML, CSS, and JavaScript!</p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+    <h2>💻 Projects</h2>
     <ul>
-      <li><a href="https://munis9sulaymon.github.io/my-first-repo/" target="_blank">My First Portfolio Website 🌐</a></li>
+      <li>🔗 <a href="#">My First Website</a></li>
+      <li>🔗 <a href="#">YouTube Downloader (Flask)</a></li>
     </ul>
   </section>
 
   <section id="contact">
-    <h2>Contact</h2>
+    <h2>📬 Contact</h2>
     <p>Email: niyozovj6@gmail.com</p>
     <p>GitHub: <a href="https://github.com/munis9sulaymon" target="_blank">@munis9sulaymon</a></p>
   </section>
+
+  <footer>
+    <p>© 2025 Munis Sulaymon</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
