🔥 Move files to root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@
     <p>Beginner Frontend Developer from Uzbekistan</p>
   </header>
 
-  <section id="about">
-    <h2>📘 About Me</h2>
-    <p>I’m currently learning web development and love building cool things with HTML, CSS, and JavaScript!</p>
+  <section class="about">
+    <h2>About Me</h2>
+    <p>I’m a student and coding newbie exploring the world of frontend development. I love learning and building cool stuff on the web 🌐.</p>
   </section>
 
-  <section id="projects">
-    <h2>💻 Projects</h2>
+  <section class="projects">
+    <h2>Projects</h2>
     <ul>
-      <li>🔗 <a href="#">My First Website</a></li>
-      <li>🔗 <a href="#">YouTube Downloader (Flask)</a></li>
+      <li>🎬 YouTube Downloader with Flask</li>
+      <li>🌐 Portfolio Website (This one!)</li>
+      <li>📱 Responsive Layout Practice</li>
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>📬 Contact</h2>
-    <p>Email: niyozovj6@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/munis9sulaymon" target="_blank">@munis9sulaymon</a></p>
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:niyozovj6@gmail.com">niyozovj6@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/munis9sulaymon" target="_blank">github.com/munis9sulaymon</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Munis Sulaymon</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
+    <p>Ma
